--- a/src/components/1_cover_page/CoverPage.module.css
+++ b/src/components/1_cover_page/CoverPage.module.css
@@ -2,4 +2,96 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+  background: #000000;
+
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.titleGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  width: 519px;
+  height: 77px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 77px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.subtitle {
+  top: 11px;
+  position: relative;
+
+  font-family: "Inter";
+  font-style: italic;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 39px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.description {
+  top: 46px;
+  position: relative;
+
+  width: 1004px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+
+  color: #ffffff;
+}
+
+.button {
+  width: 200px;
+  height: 60px;
+  left: calc(50% - 200px / 2);
+  top: calc(50% - 60px / 2 + 298px);
+
+  color: black;
+  background: white;
+  border: 2px solid black;
+
+  border-radius: 16px;
+
+  /* padding: 0.25rem 0.5rem; */
+  transition: color 0.7s, background-color, border 0.7s;
+  align-items: center;
+  cursor: pointer;
+}
+
+.button:hover {
+  color: white;
+  background: black;
+  border: 2px solid white;
+}
+
+.buttontext {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 48px;
 }
