--- a/src/components/3.1_incentive_policy_intro_page/IncentivePolicyIntroPage.module.css
+++ b/src/components/3.1_incentive_policy_intro_page/IncentivePolicyIntroPage.module.css
@@ -56,6 +56,8 @@
 }
 
 .button {
+  margin-top: 120px;
+
   width: 200px;
   min-height: 60px;
 
@@ -82,4 +84,8 @@
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
+}
+
+.pagination {
+  margin-top: 120px;
 }
