--- a/src/components/1_cover_page/CoverPage.module.css
+++ b/src/components/1_cover_page/CoverPage.module.css
@@ -3,12 +3,26 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background: #000000;
+  /* background: #000000; */
 
   height: 100%;
   width: 100%;
   position: absolute;
 }
+
+.background {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.logo {
+    height: 50px;
+    position: absolute;
+    right: 17px;
+    bottom: 10px;
+  }
 
 .titleGroup {
   display: flex;
@@ -94,6 +108,5 @@
 }
 
 .pagination {
-    margin-top: 120px;
-  }
-  
+  margin-top: 120px;
+}
