--- a/src/components/1_cover_page/CoverPage.module.css
+++ b/src/components/1_cover_page/CoverPage.module.css
@@ -18,11 +18,22 @@
 }
 
 .logo {
-    height: 50px;
-    position: absolute;
-    right: 17px;
-    bottom: 10px;
-  }
+  height: 50px;
+  position: absolute;
+  right: 17px;
+  bottom: 10px;
+}
+
+.socitylogo {
+  width: 173px;
+  height: 173px;
+  left: 10%;
+
+  mix-blend-mode: luminosity;
+  border-radius: 96px;
+
+  margin-left: 40px;
+}
 
 .titleGroup {
   display: flex;
@@ -30,18 +41,32 @@
   align-items: center;
 }
 
+.vcenter {
+  width: 100%;
+  position: absolute;
+  top: 45%;
+  transform: translate(0%, -50%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .title {
-  width: 519px;
-  height: 77px;
+  left: 15%;
+  margin-left: 40px;
+
+  width: 620px;
+  height: 205px;
 
   font-family: "Inter";
   font-style: normal;
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 77px;
+  font-weight: 600;
+  font-size: 96px;
+  line-height: 96px;
+  /* or 100% */
+
   display: flex;
   align-items: center;
-  text-align: center;
 
   color: #ffffff;
 }
@@ -79,12 +104,16 @@
 }
 
 .button {
+  position: relative;
+  left: -620px;
+  top: 180px;
+
   width: 200px;
   min-height: 60px;
 
-  color: black;
-  background: white;
-  border: 2px solid black;
+  color: white;
+  background: transparent;
+  border: 3px solid white;
 
   border-radius: 16px;
 
@@ -95,15 +124,15 @@
 }
 
 .button:hover {
-  color: white;
-  background: black;
-  border: 2px solid white;
+  color: black;
+  background: white;
+  border: 3px solid black;
 }
 
 .buttontext {
   font-family: "Inter";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 20px;
 }
 
