--- a/src/components/2.2_voting/IndicatorCard.module.css
+++ b/src/components/2.2_voting/IndicatorCard.module.css
@@ -11,4 +11,29 @@
   border: 1px solid #2c2c2c;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+
+.bar {
+    width: 20%;
+    height: 100%;
+}
+
+
+.radar {
+    width: 40%;
+    height: 100%;
+}
+
+.shading {
+    width: 40%;
+    height: 100%;
+}
+
+.img {
+    width: 100%;
+    margin-top: 10%;
 }
