--- a/src/components/0.2_navigation/Navigation.module.css
+++ b/src/components/0.2_navigation/Navigation.module.css
@@ -15,6 +15,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   z-index: 1;
+  pointer-events: none;
   /* overflow: auto; */
 }
 
@@ -126,27 +127,27 @@
   width: 450px;
   overflow: auto;
   overflow-x: hidden;
+  pointer-events: none;
 }
 
 .decoLine_1 {
-    position: absolute;
-    right: 22px;
-    top: 65px;
+  position: absolute;
+  right: 22px;
+  top: 65px;
 }
 
 .decoLine_2 {
-    position: absolute;
-    right: 22px;
-    top: 320px;
+  position: absolute;
+  right: 22px;
+  top: 320px;
 }
 
 .decoLine_3 {
-    position: absolute;
-    right: 22px;
-    top: 575px;
+  position: absolute;
+  right: 22px;
+  top: 575px;
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-  }
-  
+  width: 0px;
+}
