--- a/src/components/0.2_navigation/Navigation.module.css
+++ b/src/components/0.2_navigation/Navigation.module.css
@@ -15,7 +15,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   z-index: 1;
-  pointer-events: none;
+  pointer-events: auto;
   /* overflow: auto; */
 }
 
