--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -48,12 +48,15 @@
 .outputCol {
   width: 20%;
   min-width: 350px;
-  overflow-y: auto;
+
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .col {
   flex-basis: 0;
-  flex-grow: 1;
+  /* flex-grow: 1; */
+  flex-grow: 0;
   max-width: 100%;
 }
 
@@ -92,6 +95,7 @@
   margin-right: 14px;
   margin-left: 14px;
   margin-top: 20px;
+  margin-bottom: 30px;
 
   font-family: "Inter";
   font-style: normal;
@@ -104,6 +108,45 @@
   color: #ffffff;
 
   word-break: break-word;
+}
+
+.ind_titleTextSmall {
+  margin-left: 14px;
+  margin-top: 20px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  /* identical to box height, or 180% */
+
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+}
+
+.ind_titleTextMiddle {
+  margin-right: 14px;
+  margin-left: 14px;
+  margin-top: 5px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  /* identical to box height, or 225% */
+
+  display: flex;
+  align-items: center;
+
+  color: #ea4c6f;
+}
+
+.DecoLine {
+  position: absolute;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
 .titleTextSmall {
@@ -203,4 +246,76 @@
   color: white;
   background: black;
   border: 2px solid white;
+}
+
+.radar {
+  width: 100%;
+  height: 300px;
+  margin-top: 35px;
+}
+
+.bar {
+  width: 100%;
+  height: 300px;
+  margin-top: 30px;
+}
+
+.legend_1 {
+  position: absolute;
+  margin-left: 83px;
+  margin-top: 35px;
+
+  width: 32px;
+  height: 10px;
+
+  background: rgba(234, 76, 111, 0.2);
+  border: 1px solid #ea4c6f;
+}
+
+.legend_2 {
+  position: absolute;
+  margin-left: 187px;
+  margin-top: 35px;
+
+  width: 32px;
+  height: 10px;
+
+  background: rgba(36, 83, 255, 0.2);
+  border: 1px solid #2453ff;
+}
+
+.legend_1_text {
+  position: absolute;
+  margin-left: 26px;
+  margin-top: 35px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 10px;
+  /* identical to box height, or 83% */
+
+  display: flex;
+  align-items: center;
+
+  color: #888888;
+}
+
+.legend_2_text {
+  position: absolute;
+  margin-left: 134px;
+  margin-top: 35px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 10px;
+  /* identical to box height, or 83% */
+
+  display: flex;
+  align-items: center;
+
+  color: #888888;
 }
