--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -110,6 +110,25 @@
   word-break: break-word;
 }
 
+.ind_contentTextSmall {
+  margin-right: 14px;
+  margin-left: 14px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.8rem;
+
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+
+  word-break: break-word;
+}
+
 .ind_titleTextSmall {
   margin-left: 14px;
   margin-top: 20px;
@@ -227,36 +246,23 @@
 }
 
 .button {
-  min-width: 200px;
-  min-height: 60px;
-
-  color: black;
-  background: white;
-  border: 2px solid black;
-
-  border-radius: 16px;
-
-  /* padding: 0.25rem 0.5rem; */
-  transition: color 0.7s, background-color, border 0.7s;
-  align-items: center;
-  cursor: pointer;
-}
-
-.button:hover {
-  color: white;
-  background: black;
-  border: 2px solid white;
+  pointer-events: auto;
+  margin-top: 20px;
+  width: 90%;
+  height: 47.25px;
+  margin-left: 5%;
 }
 
 .radar {
   width: 100%;
   height: 300px;
   margin-top: 35px;
+  margin-bottom: 20px;
 }
 
 .bar {
   width: 100%;
-  height: 300px;
+  height: 190px;
   margin-top: 30px;
 }
 
