--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -247,7 +247,19 @@
 
 .button {
   pointer-events: auto;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 90%;
+  height: 47.25px;
+  margin-left: 5%;
+}
+
+.buttonGroup {
+  width: 100%;
+}
+
+.inbox_button {
+  margin-bottom: 20px;
   width: 90%;
   height: 47.25px;
   margin-left: 5%;
@@ -324,4 +336,35 @@
   align-items: center;
 
   color: #888888;
+}
+
+.slider {
+  margin-left: 5%;
+  width: 300px;
+  height: 50px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  /* or 125% */
+
+  text-align: justify;
+
+  color: #ffffff;
+}
+
+.amen_button {
+  margin-bottom: 20px;
+  min-width: 190px;
+  min-height: 32px;
+  margin-left: 20px;
+}
+
+.amen_list {
+    width: 100%;
+    max-height: 400px;
+    overflow: auto;
+    margin-bottom: 30px;
 }
