--- a/src/components/0.1_buttons/CustomButton.module.css
+++ b/src/components/0.1_buttons/CustomButton.module.css
@@ -335,3 +335,15 @@
   background: white;
   /* border: 3px solid black; */
 }
+
+.button_26 {
+  color: white;
+  background: #2c2c2c;
+  border: 1px solid 2c2c2c;
+
+  border: 1px solid #2c2c2c;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  border-radius: 8px;
+
+  cursor: not-allowed;
+}
