--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@ code {
     monospace;
 }
 
+.mapboxgl-ctrl-bottom-left {
+  display: none;
+}
+
+.mapboxgl-ctrl-bottom-right {
+  display: none;
+}
