--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -46,6 +46,8 @@
 }
 
 .outputCol {
+  z-index: 2;
+
   width: 20%;
   min-width: 350px;
 
@@ -66,7 +68,7 @@
   height: 145px;
   margin-top: 25px;
 
-  z-index: 1;
+  z-index: 2;
 
   background: #121212;
   border: 1px solid #2c2c2c;
@@ -81,7 +83,7 @@
 
   margin-top: 25px;
 
-  z-index: 1;
+  z-index: 2;
 
   background: #121212;
   border: 1px solid #2c2c2c;
@@ -89,6 +91,8 @@
   border-radius: 8px;
 
   pointer-events: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .contentTextSmall {
@@ -363,8 +367,16 @@
 }
 
 .amen_list {
-    width: 100%;
-    max-height: 400px;
-    overflow: auto;
-    margin-bottom: 30px;
+  width: 100%;
+  max-height: 400px;
+  overflow: auto;
+  margin-bottom: 30px;
+}
+
+.logo {
+  z-index: 1;
+  height: 50px;
+  position: absolute;
+  right: 17px;
+  bottom: 10px;
 }
