--- a/src/components/4.2_voting/EndowmentVotingPage.module.css
+++ b/src/components/4.2_voting/EndowmentVotingPage.module.css
@@ -23,7 +23,32 @@
   display: flex;
   flex-direction: row;
   width: 50%;
-  /* margin-top: 92px; */
+}
+
+.buttonRow {
+  margin-top: 25px;
+
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+}
+
+.amen_button {
+  /* margin-bottom: 20px; */
+  min-width: 200px;
+  min-height: 40px;
+  margin-left: 15px;
+}
+
+.costText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  margin-left: 7px;
+  color: white;
+  width: 80px;
 }
 
 .hint {
@@ -86,15 +111,14 @@
 }
 
 .amen_button {
-  margin-top: 15px;
   min-width: 190px;
-  min-height: 32px;
+  min-height: 55px;
 }
 
 .amen_list {
   margin-right: 40px;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   margin-top: 15px;
-  width: 200px;
+  width: 50%;
   height: 100%;
 }
