--- a/src/components/0.2_navigation/Navigation.module.css
+++ b/src/components/0.2_navigation/Navigation.module.css
@@ -86,6 +86,10 @@
   text-decoration: underline;
 }
 
+.circle_transition {
+  transition: fill 0.5s ease;
+}
+
 .circle {
   margin-right: 23px;
   transform: translate(50%, 0);
