--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -59,8 +59,10 @@
 .outputCol {
   z-index: 2;
 
-  width: 20%;
-  min-width: 350px;
+  /* width: 20%;
+  min-width: 350px; */
+  min-width: 400px;
+  max-width: 400px;
 
   padding-left: 16px;
   padding-right: 16px;
