added weighted hist

--- a/src/components/2.3_results/IncentiveResultPage.module.css
+++ b/src/components/2.3_results/IncentiveResultPage.module.css
@@ -121,3 +121,12 @@
   /* left: 87px; */
   /* top: 390px; */
 }
+
+.histogram {
+    /* position: absolute; */
+    width: 1248px;
+    height: 461px;
+    /* left: 87px; */
+    /* top: 390px; */
+  }
+  
