--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,11 @@ html {
   transform: scale(var(--zoom-factor));
   transform-origin: 0 0;
 }
+#protected_ur {
+    zoom: calc(1 / var(--zoom-factor));
+    transform: scale(var(--zoom-factor));
+    transform-origin: 100% 0 ;
+  }
 #protected_c {
   zoom: calc(1 / var(--zoom-factor));
   transform: translate(-50%, -50%) scale(var(--zoom-factor));
