minor fix on RWD

--- a/src/components/0.0_map/Sandbox.module.css
+++ b/src/components/0.0_map/Sandbox.module.css
@@ -5,6 +5,14 @@
   z-index: -1;
 }
 
+.mapProtectionWrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .containerFluid {
   height: 100%;
   position: absolute;
