Added disable function and new tree map

--- a/src/components/0.1_buttons/CustomButton.module.css
+++ b/src/components/0.1_buttons/CustomButton.module.css
@@ -347,3 +347,11 @@
 
   cursor: not-allowed;
 }
+
+.button_disable {
+  color: #4d4d4d;
+  background: transparent;
+  border: 3px solid #4d4d4d;
+
+  cursor: not-allowed;
+}
